--- a/help/02_DataType/05_dataType_Array.ipynb
+++ b/help/02_DataType/05_dataType_Array.ipynb
@@ -346,6 +346,148 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## OrderedDict\n",
+    "\n",
+    "### `OrderedDict` vs `dict` em Python\n",
+    "\n",
+    "O `OrderedDict` (da biblioteca `collections`) é uma subclasse do dicionário (`dict`) que **mantém a ordem de inserção das chaves**, enquanto um `dict` comum (antes do Python 3.7) não garantia ordem. A partir do Python 3.7, os dicionários padrão (`dict`) também passaram a preservar a ordem de inserção, mas o `OrderedDict` ainda tem vantagens específicas.\n",
+    "\n",
+    "## **Principais benefícios do `OrderedDict`**\n",
+    "1. **Garantia de ordem de inserção**  \n",
+    "   - Antes do Python 3.7, `dict` não mantinha a ordem das chaves. O `OrderedDict` foi criado para resolver isso.\n",
+    "   - Mesmo após o Python 3.7, `OrderedDict` ainda é útil em cenários onde a ordem é crítica e você quer garantir compatibilidade com versões antigas.\n",
+    "\n",
+    "2. **Métodos úteis para manipulação de ordem**  \n",
+    "   - `move_to_end(key, last=True|False)`: Move uma chave para o início ou fim do dicionário.\n",
+    "   - `popitem(last=True|False)`: Remove e retorna um item na ordem FIFO (útil para caches).\n",
+    "\n",
+    "3. **Igualdade (`==`) considera a ordem**  \n",
+    "   - Dois `OrderedDict`s são iguais **somente** se tiverem as mesmas chaves, valores **e mesma ordem**.\n",
+    "   - Um `dict` comum não considera a ordem na comparação.\n",
+    "\n",
+    "4. **Melhor para implementação de estruturas ordenadas**  \n",
+    "   - Útil para LRU Caches (Least Recently Used), filas ordenadas e estruturas onde a ordem importa.\n",
+    "\n",
+    "## **Quando Usar `OrderedDict`?**\n",
+    "✅ **Se você precisa de garantia de ordem em versões antigas do Python (< 3.7).**  \n",
+    "✅ **Se precisa de métodos como `move_to_end()` ou `popitem(last=False)`.**  \n",
+    "✅ **Se a ordem é parte da lógica do seu programa (ex: LRU Cache).**  \n",
+    "\n",
+    "❌ **Se você só quer um dicionário simples (Python ≥ 3.7, `dict` já é suficiente).**  \n",
+    "\n",
+    "### **Resumo**\n",
+    "| **Característica**         | `dict` (Python ≥ 3.7) | `OrderedDict`              |\n",
+    "| -------------------------- | --------------------- | -------------------------- |\n",
+    "| Mantém ordem de inserção   | Sim                   | Sim                        |\n",
+    "| Métodos de ordenação       | Não                   | (`move_to_end`, `popitem`) |\n",
+    "| Comparação considera ordem | Não                   | Sim                        |\n",
+    "| Eficiência                 | Mais rápido           | Um pouco mais lento        |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3}\n",
+      "OrderedDict([('a', 1), ('b', 2), ('c', 3)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import OrderedDict\n",
+    "\n",
+    "# Dicionário comum (Python ≥ 3.7 mantém ordem)\n",
+    "d = {'a': 1, 'b': 2, 'c': 3}\n",
+    "\n",
+    "# OrderedDict (sempre mantém ordem)\n",
+    "od = OrderedDict(d)\n",
+    "\n",
+    "print(d)       # {'a': 1, 'b': 2, 'c': 3} (ordem mantida, mas não garantida antes do Python 3.7)\n",
+    "print(od)      # OrderedDict([('a', 1), ('b', 2), ('c', 3)]) (sempre ordenado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('a', 1), ('c', 3), ('b', 2)])\n",
+      "OrderedDict([('c', 3), ('b', 2)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "od = OrderedDict([('a', 1), ('b', 2), ('c', 3)])\n",
+    "\n",
+    "# Move 'b' para o final\n",
+    "od.move_to_end('b')\n",
+    "print(od)  # OrderedDict([('a', 1), ('c', 3), ('b', 2)])\n",
+    "\n",
+    "# Remove o primeiro item (FIFO)\n",
+    "od.popitem(last=False)\n",
+    "print(od)  # OrderedDict([('c', 3), ('b', 2)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "{'a': 1, 'b': 2}\n",
+      "{'b': 2, 'a': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1 = {'a': 1, 'b': 2}\n",
+    "d2 = {'b': 2, 'a': 1}\n",
+    "print(d1 == d2)  # True (dict não considera ordem)\n",
+    "print(d1)\n",
+    "print(d2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "OrderedDict([('a', 1), ('b', 2)])\n",
+      "OrderedDict([('b', 2), ('a', 1)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "od1 = OrderedDict(d1)\n",
+    "od2 = OrderedDict(d2)\n",
+    "print(od1 == od2)  # False (OrderedDict compara ordem também)\n",
+    "print(od1)\n",
+    "print(od2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Alter"
    ]
   },
