--- a/help/02_DataType/01_dataType_.ipynb
+++ b/help/02_DataType/01_dataType_.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,12 +115,12 @@
       "complex         <class 'complex'>         1j\n",
       "list            <class 'list'>            ['apple', 'banana', 'cherry']\n",
       "tuple           <class 'tuple'>           ('apple', 'banana', 'cherry')\n",
-      "set             <class 'set'>             {'apple', 'cherry', 'banana'}\n",
+      "set             <class 'set'>             {'cherry', 'banana', 'apple'}\n",
       "dict            <class 'dict'>            {'name': 'John', 'age': 36}\n",
       "range           <class 'range'>           range(0, 6)\n",
       "bytearray       <class 'bytearray'>       bytearray(b'\\x00\\x00\\x00\\x00\\x00')\n",
-      "memoryview      <class 'memoryview'>      <memory at 0x00000178AA3024C8>\n",
-      "frozenset       <class 'frozenset'>       frozenset({'apple', 'cherry', 'banana'})\n",
+      "memoryview      <class 'memoryview'>      <memory at 0x000002C16D705300>\n",
+      "frozenset       <class 'frozenset'>       frozenset({'cherry', 'banana', 'apple'})\n",
       "bool            <class 'bool'>            True\n",
       "str             <class 'str'>             Hello World\n",
       "str/comment     <class 'str'>             Hello World\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4
  },
